@@ -12,7 +12,7 @@
          "width":60,
          "x":0,
          "y":0
-        }, 
+        },
         {
          "draworder":"topdown",
          "id":3,
@@ -28,7 +28,7 @@
                  "width":61,
                  "x":130,
                  "y":386
-                }, 
+                },
                 {
                  "gid":199,
                  "height":61,
@@ -57,7 +57,7 @@
         {
          "firstgid":1,
          "source":"blocks_tiled_test_02.tsx"
-        }, 
+        },
         {
          "firstgid":199,
          "source":"astronaut_front.tsx"
