@@ -2,6 +2,12 @@
 # some news ... see also TODO for hints
 #
 
+2019-02-12 -> assets:
+	      add some more playground
+
+	      c:
+	      add first content to final/libgame and final/fixed_tiled
+
 2019-02-09 -> assets:
 	      add some first tiled stuff
 
